# llvm_tuto

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compile_commands.json
.clangd/index/: addAlloca.cpp.E86DED6BBB931AE3.idx
AddAlloca_pass/: CMakeLists.txt  README.txt  addAlloca.cpp  example_code_test.bc  example_code_test.ll  example_code_test_new.bc  example_code_test_new.ll  makefile
AddFunction_pass/: CMakeLists.txt  README.txt  addCallFunct.cpp  addFunct.cpp  example_code_test.bc  example_code_test.c  example_code_test.ll  example_code_test_new.bc  example_code_test_new.ll  makefile
AddInitFunction_pass/: CMakeLists.txt  README.txt  addFunct2Var.cpp
AddStore_pass/: CMakeLists.txt  README.txt  addStoreInst.cpp  example_code_test.bc  example_code_test.c  example_code_test.ll  example_code_test_new.bc  example_code_test_new.ll  makefile
ClangAPI/Compile/: Makefile
ClangAPI/Compile/old/: Makefile  build_executable.cpp  compile_to_module.cpp
ClangAPI/Compile/src/main/: compile_to_module-return.cpp
ClangAPI/LibTooling/: main.cpp
FirstExample/ex1/: README.txt  ex1.bc  ex1.c  ex1.reg.bc
FirstExample/ex2/: README.txt  cse.bc  cse.c  cse.reg.bc
FirstExample/ex3/: README.txt  ex3.c  ex3.ll
FirstPass/pass_ex/: .clang_complete  README.txt  makefile  opCounter.cpp  opcode.bc  opcode.c
ListFunct_pass/: README.txt  example_code_test.bc  example_code_test.c  listFunctPass.cpp  makefile
LoopPass/pass_countblkloop/: BlkLoopPass.cpp  README.txt  loop.c  makefile
Parse/bin_pass/: README  makefile
Parse/bin_pass/old/: makefile
Parse/bin_pass/src_llvm/main/: main.cpp
UpdateVariable_pass/: README.txt  example_code_test.bc  example_code_test.c  example_code_test.ll  initVarPass.cpp  makefile
bin_pass/: makefile
bin_pass/src_llvm/main/: main.cpp
ex1/: ex1.c  ex1.cp.bc
ex2/: cse.c  cse.o.bc
ex3/: README.txt  ex3.bc  ex3.c  ex3.ll
pass_countblkloop/: BlkLoopPass.cpp  README.txt  loop.bc  makefile
pass_ex/: makefile  opcode.bc
pass_forcePred_postcond/: inf.ll  loop.ll  makefile  new_loop.bc  new_loop.c
test/: CMakeLists.txt  init_main.c  preprocessed.c.cseq.c
utils/pass_forcePred_postcond/: .clang_complete  .goutputstream-517COY  BreakInfiniteLoops.cpp  FPredLoopPass.cpp  README.txt  dll_nullified_false-unreach-call_false-valid-memcleanup.bc  dll_nullified_false-unreach-call_false-valid-memcleanup.i  inf.bc  inf.c  inf.ll  loop.bc  loop.c  loop.ll  makefile  new_loop.c
